--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"	
+		"preview": "vite preview"
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.14",
@@ -15,6 +15,7 @@
 		"motion": "^12.23.22",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
+		"react-icons": "^5.5.0",
 		"react-swipeable": "^7.0.2",
 		"tailwindcss": "^4.1.14"
 	},
